--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "bootstrap": "^5.3.0",
     "sass": "^1.63.4",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
